'Editing missing layout'

--- a/math/src/main/res/layout/options.xml
+++ b/math/src/main/res/layout/options.xml
@@ -32,7 +32,7 @@
 
             <Button
                 android:id="@+id/close_button_opt"
-                android:layout_width="20dp"
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginLeft="130dp"
                 android:layout_marginBottom="5dp"
