--- a/math/src/main/res/layout/activity_easy.xml
+++ b/math/src/main/res/layout/activity_easy.xml
@@ -123,7 +123,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         android:layout_alignBottom="@+id/waktu"
         android:layout_toRightOf="@+id/back"
         android:layout_toEndOf="@+id/back" />
