Fixed Some layout Error + Ideas + Update On SDP ( Tag : R )

--- a/math/src/main/res/layout/info_math.xml
+++ b/math/src/main/res/layout/info_math.xml
@@ -57,13 +57,10 @@
                 android:orientation="horizontal"
                 android:id="@+id/lR"
                 >
-                -->
-
-
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/lr1"
@@ -93,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:id="@+id/sliding_text_marquee"
-            android:text="@string/adp"
+            android:text="@string/polostod_app_copyright"
             android:textSize="14sp"
             android:gravity="center"
             android:textStyle="bold" />
