--- a/math/src/main/res/values/styles.xml
+++ b/math/src/main/res/values/styles.xml
@@ -24,6 +24,18 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+    <!-- Try to symlink style by Bitmap -->
+    <style name="app_theme" parent="android:Theme">
+        <item name="android:windowBackground">@drawable/background</item>
+        <item name="android:listViewStyle">@style/TransparentListView</item>
+        <item name="android:expandableListViewStyle">@style/TransparentExpandableListView</item>
+    </style>
 
+    <style name="TransparentListView" parent="@android:style/Widget.ListView">
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+    </style>
 
+    <style name="TransparentExpandableListView" parent="@android:style/Widget.ExpandableListView">
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+    </style>
 </resources>
